# rules_coco

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .typos.toml  BUILD  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE  renovate.json  version.bzl
.bcr/: presubmit.yml
.devcontainer/: devcontainer.json  setup.sh
.github/: .gitignore  release_notes.template
.github/scripts/: github_app_token.py
.github/workflows/: continuous-integration.yml  release.yaml  test.yaml  update-digests.yml
coco/: BUILD  c.bzl  cc.bzl  coco.bzl  defs.bzl  extensions.bzl  known_shas.bzl  licensing.bzl  repositories.bzl  toolchain.bzl
coco/private/: BUILD  c_runtime.bzl  cc_library.bzl  cc_runtime.bzl  cc_runtime_deps.bzl  coco.bzl  common_repositories.bzl  diagram.bzl  format.bzl  known_shas.bzl  licensing.bzl  repositories.bzl  tests.bzl  version_aliases.bzl
coco/toolchain/: BUILD
config/license_source/: BUILD
docs/: BUILD  README.md  c.md  cc.md  defs.md  extensions.md  renovate.md  repositories.md
e2e/byo_toolchain/: .gitignore  BUILD.bazel  Coco.toml  MODULE.bazel  stage.py
e2e/byo_toolchain/popili_dist/: BUILD.bazel
e2e/byo_toolchain/src/: Example.coco
e2e/byo_toolchain/tools/: BUILD.bazel
e2e/cc_runtime_extra_deps/: BUILD.bazel  Coco.toml  MODULE.bazel  WORKSPACE
e2e/cc_runtime_extra_deps/stub/: BUILD.bazel  boost_stub.h
e2e/cc_runtime_extra_deps/test/: extra_deps_test.cc  main.cc
e2e/external_deps/: .bazelrc  BUILD.bazel  Coco.toml  MODULE.bazel  WORKSPACE
e2e/external_deps/dep/: BUILD.bazel  Coco.toml  MODULE.bazel  WORKSPACE
e2e/external_deps/src/: IApp.coco
e2e/local_toolchain/: .bazelrc  .gitignore  BUILD.bazel  Coco.toml  MODULE.bazel  WORKSPACE  stage.py
e2e/local_toolchain/test/: local_toolchain_test.cc  main.cc
e2e/multi_version/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
e2e/multi_version/flexible/: Coco.toml
e2e/multi_version/flexible/src/: Example.coco
e2e/multi_version/legacy/: Coco.toml
e2e/multi_version/legacy/src/: Example.coco
e2e/multi_version/modern/: Coco.toml
e2e/multi_version/modern/src/: Example.coco
e2e/no_runtime/: BUILD.bazel  Coco.toml  MODULE.bazel  WORKSPACE
e2e/no_runtime/src/: add.coco
e2e/no_runtime/test/: add_test.c
e2e/smoke/: BUILD.bazel  Coco.toml  MODULE.bazel  WORKSPACE
e2e/smoke/src/: Example.coco
e2e/smoke/test/: main.cc  smoke_test.cc
examples/multi_version/: README.md
test/base/src/: Comp.coco
test/base/test/: base.cc
test/c_basic/: BUILD  Coco.toml
test/c_basic/src/: Example.coco
test/c_file_extensions/: BUILD  Coco.toml
test/c_file_name_mangling/: BUILD  Coco.toml
test/c_file_prefixes/: BUILD  Coco.toml
test/c_flat_hierarchy/: BUILD  Coco.toml
test/c_object_orientated/: BUILD  Coco.toml
test/c_object_orientated/src/: Comp.coco
test/c_simple_explicit/: BUILD  Coco.toml
test/c_simple_explicit/src/: Example.coco
test/cpp_merged_library/: BUILD
test/cpp_merged_library/actuators/: Coco.toml
test/cpp_merged_library/actuators/src/: IActuator.coco
test/cpp_merged_library/sensors/: Coco.toml
test/cpp_merged_library/sensors/src/: ISensor.coco
test/cpp_merged_library/test/: merged_test.cc
test/cpp_mixed_library/: BUILD  Coco.toml
test/cpp_mixed_library/handwritten/: sensor_wrapper.cc  sensor_wrapper.h
test/cpp_mixed_library/src/: ISensor.coco
test/cpp_mixed_library/test/: sensor_test.cc
test/cpp_path_hdrs/: BUILD  Coco.toml
test/cpp_path_hdrs/src/: IPublicApi.coco
test/cpp_path_hdrs/test/: path_hdrs_test.cc
test/cpp_selective_hdrs/: BUILD  Coco.toml
test/cpp_selective_hdrs/src/: IPublicApi.coco  InternalComp.coco
test/cpp_selective_hdrs/test/: selective_test.cc
test/cpp_with_deps/: BUILD
test/cpp_with_deps/app/: Coco.toml
test/cpp_with_deps/app/src/: IApp.coco
test/cpp_with_deps/app/test/: app_test.cc
test/cpp_with_deps/base/: Coco.toml
test/cpp_with_deps/base/src/: IBase.coco
test/cpp_with_deps/middle/: Coco.toml
test/cpp_with_deps/middle/src/: IMiddle.coco
test/csharp_basic/: BUILD  Coco.toml  validator.cc
test/csharp_basic/src/: Example.coco
test/diagrams/: BUILD  Coco.toml  Encapsulating.coco  LoggerAndAlarm.coco
test/file_extensions/: BUILD  Coco.toml
test/file_extensions/src/: Example.coco
test/file_name_mangling/: BUILD  Coco.toml
test/file_name_mangling/src/: ExampleName.coco
test/file_prefixes/: BUILD  Coco.toml
test/file_prefixes/src/: Example.coco
test/flat_hierarchy/: BUILD  Coco.toml
test/no_auto_download/: BUILD  Coco.toml
test/no_auto_download/src/: Simple.coco
test/package_directory/: BUILD  Coco.toml  Comp.coco  PBase.coco  Runnable.coco
test/package_directory/test/: base.cc
test/regenerate_packages/: BUILD
test/regenerate_packages/app/: Coco.toml
test/regenerate_packages/app/sources/: IApp.coco
test/regenerate_packages/app/test/: c_test.c  cpp_test.cc  csharp_validator.cc
test/regenerate_packages/base/: Coco.toml
test/regenerate_packages/base/source/: IBase.coco
test/simple/: BUILD  Coco.toml  typecheck.sh
test/simple/test/: base.cc
test/version/: BUILD  version_consistency_test.py
test/visibility_propagation/: BUILD  Coco.toml
test/visibility_propagation/consumer/: BUILD
test/visibility_propagation/src/: Simple.coco
test/workspace_basic/: BUILD  Coco.toml
test/workspace_basic/app/: Coco.toml
test/workspace_basic/app/test/: app_test.cc
test/workspace_basic/base/src/: IBase.coco
test/workspace_basic/middle/: Coco.toml
test/workspace_cross/: BUILD  app_test.cc
test/workspace_cross/app/: Coco.toml
test/workspace_cross/app/src/: IApp.coco
test/workspace_cross/lib/: Coco.toml
test/workspace_cross/ws_app/: Coco.toml
test/workspace_cross/ws_lib/: Coco.toml
test/workspace_explicit/: BUILD  pkg_test.cc
test/workspace_explicit/pkg/: Coco.toml
test/workspace_explicit/ws/: Coco.toml
test/workspace_nested/: BUILD  Coco.toml  pkg_test.cc
test/workspace_nested/inner/: Coco.toml
tools/: BUILD  generate_renovate_versions.py  local_test.py  release.py  stage_popili.py  update_digests.py  update_docs.sh
(+5 files in other folders)
