# E2E for the "bring your own toolchain" path: a coco_toolchain you register
# yourself, without invoking the coco toolchain extension at all — the path popili
# will use to verify in-tree. bzlmod-only (no WORKSPACE file). Run stage.py to
# populate popili_dist/bin/, then `bazel test`.

module(
    name = "rules_coco_byo_toolchain_test",
    version = "0.0.0",
)

bazel_dep(name = "rules_coco", version = "")
local_path_override(
    module_name = "rules_coco",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")

register_toolchains("//tools:byo_popili_tc")
