# Uses a local stub cc_library instead of rules_boost so CI stays lean.

module(
    name = "rules_coco_cc_runtime_extra_deps_test",
    version = "0.0.0",
)

bazel_dep(name = "rules_coco", version = "")
local_path_override(
    module_name = "rules_coco",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

coco = use_extension("@rules_coco//coco:extensions.bzl", "coco")
coco.toolchain(
    cc = True,
    versions = ["stable"],
)
coco.cc_runtime_deps(
    version = "stable",
    deps = ["//stub:boost_stub"],
)
