load("@rules_coco//coco:defs.bzl", "coco_package", "coco_verify_test")

coco_package(
    name = "app",
    srcs = glob(["src/**/*.coco"]),
    package = "Coco.toml",
    deps = ["@coco_dep//:base"],
)

# Previously failed: "invalid import path; external/coco_dep+ is not a directory".
coco_verify_test(
    name = "app_verify",
    package = ":app",
)
