# Verifies a coco_package whose dependency lives in another Bazel repo
# (@coco_dep): regression coverage for runfiles-relative import paths.

module(
    name = "rules_coco_external_deps_test",
    version = "0.0.0",
)

bazel_dep(name = "rules_coco", version = "")
local_path_override(
    module_name = "rules_coco",
    path = "../..",
)

bazel_dep(name = "coco_dep", version = "0.0.0")
local_path_override(
    module_name = "coco_dep",
    path = "dep",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")

coco = use_extension("@rules_coco//coco:extensions.bzl", "coco")
coco.toolchain(cc = True)
