# E2E test for multi-version support in rules_coco
# This MODULE.bazel demonstrates registering and using multiple coco versions

module(
    name = "rules_coco_multi_version_test",
    version = "0.0.0",
)

# Override rules_coco to use local development version
bazel_dep(name = "rules_coco", version = "")
local_path_override(
    module_name = "rules_coco",
    path = "../..",
)

# Required dependencies
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

# Register multiple coco versions for testing
coco = use_extension("@rules_coco//coco:extensions.bzl", "coco")
coco.toolchain(
    cc = True,
    versions = [
        "1.5.0",
        "1.5.1",
    ],
)
