# E2E test for rules_coco with only C runtime (no C++)
# This tests that C works while C++ runtime is disabled

module(
    name = "rules_coco_no_cc_runtime_test",
    version = "0.0.0",
)

# Override rules_coco to use local development version
bazel_dep(name = "rules_coco", version = "")
local_path_override(
    module_name = "rules_coco",
    path = "../..",
)

# Required dependencies
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

# Register coco toolchain with C only (no C++ runtime)
coco = use_extension("@rules_coco//coco:extensions.bzl", "coco")
coco.toolchain(
    c = True,
    cc = False,
)
