# E2E smoke test for basic rules_coco functionality
# This tests single-version usage with C++ code generation and execution

module(
    name = "rules_coco_smoke_test",
    version = "0.0.0",
)

# Override rules_coco to use local development version
bazel_dep(name = "rules_coco", version = "")
local_path_override(
    module_name = "rules_coco",
    path = "../..",
)

# Required dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# Register coco toolchain with default stable version
coco = use_extension("@rules_coco//coco:extensions.bzl", "coco")
coco.toolchain(cc = True)
