# Exposes the staged bin/ binaries (gitignored) as single-file labels for //tools.
# Wildcards tolerate the .exe suffix; the exclude drops popili-language-server.
filegroup(
    name = "popili",
    srcs = glob(
        ["bin/popili*"],
        allow_empty = True,
        exclude = ["bin/popili-language-server*"],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "licensing_server",
    srcs = glob(
        ["bin/cocotec-licensing-server*"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)
